1.2.16 (unreleased)

- Add a "plone_timezone" variable that may be used to set a timezone (via TZ environment variable) that may be different from the server or other plones.
  [smcmahon]

- Make default Plone 5.0.7.
  [smcmahon]

- Set backup directory correctly when building multiple Plones. Fixes #103.
  [smcmahon]

- Update source for wv for CentOS7.
  [smcmahon]

1.2.15 2017-02-01

- Redirect stdout and stderr for buildout into a log file.
  This works around an Ansible bug that caused errors with misleading error messages if buildout output was long.
  Workaround: if you don't have this fix, just run the playbook again.
  The error resolves itself as soon as buildout output is smaller.
  [smcmahon]

1.2.14 2017-01-20

- Remove uses of jinja2 "truncate", which has stopped working as advertised.
  [smcmahon]

1.2.13 2016-10-07

- Turn of ssh strict host checking by Ansible in generated Vagrant vbox_host.cfg.
  [smcmahon]

- Fix "Problem with host_vars overriding" from playbook repo https://github.com/plone/ansible-playbook/issues/51.
  [smcmahon]

- Switch to https urls for dist.plone.org.
  [smcmahon]

1.2.12 2016-09-30

- Switch to use Posix xX distinction in chmod rather than find/exec strategy.
  [djowett]

- Update default version to 5.0.6. Add 20160830 hotfix.
  [smcmahon]

- Use jinja2's version_compare when comparing complex version numbers. Fixes #95.
  [smcmahon]

- Default Vagrant box: trusty -> xenial.
  [smcmahon]

- Add a provisioning mechanism that creates vbox_host.cfg during vagrant provisioning.
  This makes it easier to use Ansible directly against the newer generation of Vagrant boxes that don't have insecure keys.
  [smcmahon]

1.2.11 2016-07-18

- Fix Bootstrap for 4.3 play, which was using the old path to Python.
  [djowett]

1.2.10 2016-07-18

- Use the same alias for Python in both 4.x and 5.x, python2.7.
  This only matters for tests.
  [smcmahon]

- The way we use become_user is problematic for Ansible 2.1 unless pipelining is in use.